# test-project

./: CMakeLists.txt  main.cpp
Administration/: ComputerClass.cpp  ComputerClass.h  ComputerClassAdmin.cpp  ComputerClassAdmin.h
Computers/: AcerComputer.cpp  AcerComputer.h  AsusComputer.cpp  AsusComputer.h  Computer.cpp  Computer.h
Devices/: AsusMotherBoard.cpp  AsusMotherBoard.h  MSIMotherBoard.cpp  MSIMotherBoard.h  MotherBoard.cpp  MotherBoard.h
Stores/: ComputerStore.cpp  ComputerStore.h  IValuable.cpp  IValuable.h  SimpleComputerStore.cpp  SimpleComputerStore.h
